--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-server": "^5.0.0",
     "@angular/router": "^5.0.0",
     "@angular/upgrade": "^5.0.0",
+    "@auth0/angular-jwt": "^1.0.0-beta.11",
+    "angular2-jwt": "^0.2.3",
     "async": "^2.6.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "core-js": "^2.4.1",
@@ -28,7 +31,9 @@
     "exceljs": "^1.4.6",
     "express": "~4.14.0",
     "hbs": "~3.1.0",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.0",
+    "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.6.1",
     "multer": "^1.3.0",
     "reflect-metadata": "^0.1.3",
