--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "~1.6.1",
     "multer": "^1.3.0",
+    "mydatepicker": "^2.6.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.5.0",
     "serve-favicon": "~2.3.0",
