--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "morgan": "~1.6.1",
     "multer": "^1.3.0",
     "mydatepicker": "^2.6.3",
+    "ngx-clipboard": "^11.1.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "^5.5.0",
     "serve-favicon": "~2.3.0",
